Bug 84290 - Appointments overlap all-day appointments in month view
Changeset:
1. zm.css - Height attribute was missing unit (px) in class .allday_item_filler. This was causing appointments to overlap all-day appointments.

http://bugzilla.zimbra.com/show_bug.cgi?id=84290

Copied from Perforce
 Change: 491466

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -2734,7 +2734,7 @@ HTML>BODY .appt-selected .appt_allday_body
 /* filler for a blank all day item row in month view */
 .allday_item_filler {
 	/* Size based on ZmCalMonthView._layoutAllDay */
-	height:21;
+	height:21px;
 }
 
 
